# nu-jupyter-kernel

./: .gitignore  Cargo.toml  LICENSE  README.md  banner.txt  commands.toml  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/nu_plugin_plotters/: Cargo.toml  README.md
crates/nu_plugin_plotters/src/: lib.rs  main.rs  plugin.rs
crates/nu_plugin_plotters/src/chart/: chart_2d.rs  chart_builder.rs  mod.rs
crates/nu_plugin_plotters/src/commands/: chart_2d.rs  mod.rs
crates/nu_plugin_plotters/src/commands/draw/: mod.rs  png.rs  svg.rs  terminal.rs
crates/nu_plugin_plotters/src/commands/series/: bar.rs  line.rs  mod.rs
crates/nu_plugin_plotters/src/value/: chart_2d.rs  color.rs  mod.rs  series_2d.rs
crates/nu_plugin_plotters/src/value/coords/: coord_1d.rs  coord_2d.rs  mod.rs  range.rs
examples/: .ipynb  example.ipynb  polars-data.nu  polars.ipynb
src/: connection_file.rs  error.rs  execute_nu.rs  jupyter_messages.rs  main.rs  nu.rs  register_kernel.rs  util.rs
src/handlers/: control.rs  mod.rs  shell.rs  stream.rs
src/jupyter/: connection_file.rs  kernel_info.rs  mod.rs  register_kernel.rs
src/jupyter/messages/: control.rs  iopub.rs  mod.rs  multipart.rs  shell.rs
src/nu/: konst.rs  mod.rs  module.rs  render.rs
src/nu/commands/: command.rs  display.rs  external.rs  mod.rs  print.rs
tests/: test_kernel.py
tools/: try.py
