[package]
name = "nu-jupyter-kernel"
version = "0.1.0-wip"
edition = "2021"
description = "A wip jupyter raw kernel for nu"
repository = "https://github.com/cptpiepmatz/nu-jupyter-kernel"
license = "MIT"
keywords = ["jupyter-kernel", "jupyter", "nushell"]
categories = ["science"]
publish = false

[package.metadata.jupyter]
protocol_version = "5.4"

[dependencies]
# nu
nu-cmd-extra = { version = "0.94", path = "../nushell/crates/nu-cmd-extra" }
nu-cmd-lang = { version = "0.94", path = "../nushell/crates/nu-cmd-lang" }
nu-cmd-plugin = { version = "0.94", path = "../nushell/crates/nu-cmd-plugin" }
nu-command = { version = "0.94", path = "../nushell/crates/nu-command", features = ["plugin"] }
nu-engine = { version = "0.94", path = "../nushell/crates/nu-engine" }
nu-parser = { version = "0.94", path = "../nushell/crates/nu-parser", features = ["plugin"] }
nu-protocol = { version = "0.94", path = "../nushell/crates/nu-protocol", features = ["plugin"] }

# Cryptography and Security
hmac = "0.12.1"
sha2 = "0.10.8"

# Data Handling and Serialization
bytes = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.8.0"

# Date and Time
chrono = "0.4.38"

# Derive Macros
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
strum = { version = "0.26", features = ["derive"] }

# Error Handling
thiserror = "1.0.58"
miette = { version = "7.2.0", features = ["fancy"] }

# Filesystem
dirs = "5.0.1"

# Formatting and Utilities
const_format = "0.2.32"
hex = "0.4.3"

# Media and Configuration Types
mime = "0.3.17"
mime_guess = "2.0.4"
static-toml = "1.2.0"

# Networking and IPC
os_pipe = { version = "1.1.5", features = ["io_safety"] }
zmq = "0.10.0"

# Synchronization and Concurrency
parking_lot = "0.12.2"

# Miscellaneous
atomic_enum = "0.3.0"
