[package]
name = "nu-jupyter-kernel"
version = "0.1.0-wip"
edition.workspace = true
description = "A wip jupyter raw kernel for nu"
repository.workspace = true
license.workspace = true
keywords = ["jupyter-kernel", "jupyter", "nushell"]
categories = ["science"]
publish = false

[workspace.package]
edition = "2021"
repository = "https://github.com/cptpiepmatz/nu-jupyter-kernel"
license = "MIT"

[package.metadata.jupyter]
protocol_version = "5.4"

[features]
default = ["plotting"]
plotting = ["nu-plotters"]

[workspace]
members = ["crates/nu_plugin_plotters"]

# plotting
[dependencies.nu-plotters]
package = "nu_plugin_plotters"
version = "0.1.0-wip"
path = "crates/nu_plugin_plotters"
default-features = false
optional = true

[dependencies]
# nu
nu-cmd-extra = { version = "0.96" }
nu-cmd-lang = { version = "0.96" }
nu-cmd-plugin = { version = "0.96" }
nu-command = { version = "0.96", features = ["plugin"] }
nu-engine = { version = "0.96" }
nu-parser = { version = "0.96", features = ["plugin"] }
nu-protocol = { version = "0.96", features = ["plugin"] }

# Cryptography and Security
hmac = "0.12.1"
sha2 = "0.10.8"

# Data Handling and Serialization
bytes = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.8.0"

# Date and Time
chrono = "0.4.38"

# Derive Macros
clap = { version = "4.5.4", features = ["derive"] }
derive_more = "0.99.17"
strum = { version = "0.26", features = ["derive"] }

# Error Handling
thiserror = "1.0.58"
miette = { version = "7.2.0", features = ["fancy"] }

# Filesystem
dirs = "5.0.1"

# Formatting and Utilities
const_format = "0.2.32"
hex = "0.4.3"

# Media and Configuration Types
mime = "0.3.17"
mime_guess = "2.0.4"
static-toml = "1.2.0"

# Networking and IPC
os_pipe = { version = "1.1.5", features = ["io_safety"] }
zeromq = "0.4.0"

# Synchronization and Concurrency
parking_lot = "0.12.2"
tokio = { version = "1.39.2", features = ["rt", "macros", "parking_lot"] }

# Miscellaneous
atomic_enum = "0.3.0"
