[package]
name = "nu-jupyter-kernel"
version = "0.1.6+0.101.0"
edition.workspace = true
description = "A jupyter raw kernel for nu"
repository.workspace = true
license.workspace = true
keywords = ["jupyter-kernel", "jupyter", "nushell"]
categories = ["science"]

[workspace.package]
edition = "2021"
repository = "https://github.com/cptpiepmatz/nu-jupyter-kernel"
license = "MIT"

[package.metadata.jupyter]
protocol_version = "5.4"

[features]
default = ["plotting"]
plotting = ["nu-plotters"]

[workspace]
members = ["crates/nu_plugin_plotters"]

[workspace.dependencies]
nu-cmd-extra = "0.101.0"
nu-cmd-lang = "0.101.0"
nu-cmd-plugin = "0.101.0"
nu-command = { version = "0.101.0", features = ["plugin"] }
nu-engine = { version = "0.101.0" }
nu-parser = { version = "0.101.0", features = ["plugin"] }
nu-protocol = { version = "0.101.0", features = ["plugin"] }
nu-plugin = "0.101.0"
nuon = "0.101.0"

# plotting
[dependencies.nu-plotters]
package = "nu_plugin_plotters"
version = "0.1"
path = "crates/nu_plugin_plotters"
optional = true

[dependencies]
# nu
nu-cmd-extra.workspace = true
nu-cmd-lang.workspace = true
nu-cmd-plugin.workspace = true
nu-command.workspace = true
nu-engine.version = "0.101.0"  # cannot publish if this inherits from workspace
nu-parser.workspace = true
nu-protocol.workspace = true

# Cryptography and Security
hmac = "0.12.1"
sha2 = "0.10.8"

# Data Handling and Serialization
bytes = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.8.0"

# Date and Time
chrono = "0.4.38"

# Derive Macros
clap = { version = "4.5.4", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
strum = { version = "0.26", features = ["derive"] }

# Error Handling
thiserror = "2.0.3"
miette = { version = "7.2.0", features = ["fancy"] }

# Filesystem
dirs = "5.0.1"

# Formatting and Utilities
const_format = "0.2.32"
hex = "0.4.3"

# Media and Configuration Types
mime = "0.3.17"
mime_guess = "2.0.4"
static-toml = "1.2.0"

# Networking and IPC
os_pipe = { version = "1.1.5", features = ["io_safety"] }
zeromq = "0.4.0"

# Synchronization and Concurrency
parking_lot = "0.12.2"
tokio = { version = "1.39.2", features = ["rt", "macros", "parking_lot"] }

# Miscellaneous
atomic_enum = "0.3.0"
