[project]
name = "nu-jupyter-tools"
version = "0.0.0"
description = "Tools and tests for working with the nu-jupyter-kernel"
requires-python = ">=3.12"
dependencies = [
    "jupyter-client>=8.6.3",
    "pytest-timeout>=2.4.0",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
timeout_method = "thread"
