[package]
name = "nu_plugin_plotters"
description = "A nushell plugin for for plotting charts"
version = "0.1.3+0.101.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# nu
nu-plugin.workspace = true
nu-protocol.workspace = true
nu-engine.workspace = true

# plotting
plotters = "0.3.6"

# serialization, needed for custom values
serde = { version = "1", features = ["derive"] }
typetag = "0.2"

# drawing to the terminal
icy_sixel = "0.1"

# misc
indoc = "2"
