[package]
name = "nu_plugin_plotters"
description = "A nushell plugin for for plotting charts"
version = "0.2.4+0.110.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# nu
nu-plugin.workspace = true
nu-protocol.workspace = true
nu-engine.workspace = true

# plotting
plotters = "0.3.6"

# dates
chrono = "0.4"

# serialization, needed for custom values
serde = { version = "1", features = ["derive"] }
typetag = "0.2"

# drawing to the terminal
icy_sixel = "0.1"
viuer = "0.9"
image = "0.25"

# misc
indoc = "2"
mime2 = "0.1"
